--- a/DoucoureEnglishAcademy/templates/acceuil.html
+++ b/DoucoureEnglishAcademy/templates/acceuil.html
@@ -7,6 +7,7 @@
 {% block h2 %}
     <div class="hero">
         <h1>Bienvenue à Doucouré English Academy</h1>
+         <p>learn english and boost your level in World</p>
     </div>
 {% endblock h2 %}
 
