--- a/DoucoureEnglishAcademy/templates/course.html
+++ b/DoucoureEnglishAcademy/templates/course.html
@@ -19,22 +19,20 @@
             <th>Date de fin</th>
             <th>duree_heures</th>
             <th>enseignant</th>
-            <th>niveau</th>
             <th>prix</th>
         </tr>
     </thead>
     <tbody>
         {% for c in cours%}
         <tr>
-            <td>{{ c.titre }}</td>
-            <td>{{ c.description }}</td>
-            <td>{{ c.niveau }}</td>
-            <td>{{ c.date_debut }}</td>
-            <td>{{ c.date_fin }}</td>
-            <td>{{duree_heures}}</td>
-            <td>enseignant</td>
-            <td>niveau</td>
-            <td>prix</td>
+            <td>{{c.titre }}</td>
+            <td>{{c.description }}</td>
+            <td>{{c.niveau }}</td>
+            <td>{{c.date_debut }}</td>
+            <td>{{c.date_fin }}</td>
+            <td>{{c.duree_heures}}</td>
+            <td>{{c.enseignant}}</td>
+            <td>{{c.prix}}</td>
         </tr>
         {% endfor %}
         {% endblock coursList %}
